# contractshield

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  DOCUMENTATION_EXPORT.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  SPEC.md  documentation steps.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-vuln.mjs  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: .env.example  .gitignore  README.md  ecosystem.config.cjs  package.json
contractshield-python/: .gitignore  README.md  pyproject.toml
contractshield-python/.github/workflows/: publish-pypi.yml  publish-testpypi.yml
contractshield-python/examples/: fastapi_basic.py  openapi_validation.py  vulnerability_scanner.py
contractshield-python/src/contractshield/: __init__.py
contractshield-python/src/contractshield/cel/: __init__.py  evaluator.py
contractshield-python/src/contractshield/core/: __init__.py  contract.py  errors.py  result.py  validator.py
contractshield-python/src/contractshield/fastapi/: __init__.py  middleware.py
contractshield-python/src/contractshield/openapi/: __init__.py  loader.py
contractshield-python/src/contractshield/vulnerability/: __init__.py  command.py  nosql.py  path_traversal.py  prototype.py  scanner.py  sqli.py  ssrf.py  xss.py
contractshield-python/tests/: __init__.py  test_cel.py  test_core.py  test_openapi.py  test_vulnerability.py
contractshield-spring/: README.md  pom.xml
docker/: Dockerfile  docker-compose.yml
docs/: adapters.md  architecture.md  comparison.md  contractshield.md  decision-schema.md  deployment.md  deprecated.md  faq.md  getting-started.md  graphic-charter.md  guardrails.md  intra-application.md  landing.md  licensing.md  manifesto.md  non-regression.md  observability.md  pdp-architecture.md  pdp-code-walkthrough.md  policy-authoring.md  policy-language.md  policy-packs.md  principles.md  security-boundary.md  security.md  sink-rasp.md  threat-model.md  vulnerability-checks.md  webhooks.md  why-contractshield.md  why-guardrails.md
examples/: 01-feature-iteration.md  02-refactor.md  03-bugfix.md  openapi.yaml
fixtures-v2/: README.md  loader.mjs
license/: README.md  apache-2.0.md  commercial.md  open-core.md
policy/: application_policy.md  policy.example.yaml
pro/: LICENSE
prompts/: bugfix.prompt.md  feature.prompt.md  non-regression.prompt.md  refactor.prompt.md  security-review.prompt.md
schemas/: decision.v0.1.json  decision.v0.1.schema.json  policy.v0.1.schema.json  request-context.v0.1.schema.json
tools/: README.md  golden-pdp-runner.mjs  package.json  schemaLoader.mjs
tutorial/: hello-contractshield.md  hello-guardrails.md
(+220 files in other folders)
